--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
 }
+//sourceCompatibility = "11"
+//compileJava.options.encoding = "UFT-8"
+//compileTestJava.options.encoding = "UFT-8"
 
 group 'ru.netology'
 version '1.0-SNAPSHOT'
@@ -8,11 +11,17 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+//dependencies {
+//        testImplementation 'org.testng:testng:7.1.0'
+//}
+//test {
+//    useTestNG()
+//}
 dependencies {
-        testImplementation 'org.testng:testng:7.1.0'
-}
-test {
-    useTestNG()
+    testImplementation 'junit:junit:4.13'
 }
 
+test {
+    useJUnit()
+}
 
